=== rmw ChangeLog ===
rmw ChangeLog

2018-12-08

  * Implemented unit testing (though I've only created one unit test and
  no docs for unit testing yet)

2018-12-05

  * release version 0.7.01

2018-12-02

* Added --enable-debug option to `configure`.

2018-11-28

* Bugfix: "In some cases, not all files are displayed when using '-s'"
  <https://github.com/theimpossibleastronaut/rmw/issues/205>
  Enabled "wide-character" support by linking against ncursesw and
  menuw (instead of curses and menu). Some users may need to install
  libcursesw5-dev (or similarly named package) for the build to work.
  Thanks to Norm for giving me the solution.


2018-11-16

* Bugfix: On OpenBSD rmw would segfault 80% of the time.
https://github.com/theimpossibleastronaut/rmw/commit/7117c4f7761b7a5ba670e48260d0fcddb3908c35

Thanks to GazL for pointing the problem out to me.

2018-11-11

* rmw will warn the user about invalid or unknown options if it finds any
  in the config file (instead of just ignoring it).

2018-11-06

* If there is no default configuration file present, one will be
  written to $HOME/.config/rmw/config when rmw is first run.

* If verbosity is on, rmw will tell the user which config file is being used

2018-11-04

* When running purge, rmw will now show the total number of files and
  directories deleted, as well as the amount of bytes that were freed.

2018-10-30

* `rmw -s` now returns a sorted list of files

2018-10-26

* PROTECT feature removed

2018-10-24

* released rmw v0.4.05

2018-10-22

* tests for the Restore feature have been added.
* The configuration file (rmwrc) is no longer installed when `make
  install` is run.

2018-10-21

* test scripts are now run using 'make test-...' from the test directory

2018-10-11

* fr_FR translation added


2018-10-02

* de_DE translation added

2018-02-13

    libtool removed from configure

    Translations added:
      es_AR
      es_ES
      pt_BR

2018-01-14
